# python-cfdi

./: CHAGELOG.md  LICENCE  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cfdi_python/: __init__.py  handlers.py
cfdi_python/wrappers/: acreditamientoIEPS10.py  aerolineas10.py  cartaPorte10.py  cfdi33.py  cfdi40.py  locations.py  nomina12.py  schemas.py  timbreFiscalDigital11.py  utils.py
cfdi_python/wrappers/xsds/: __init__.py  acreditamientoIEPS10.xsd  aerolineas10.xsd  cartaPorte10.xsd  cartaPorte20.xsd  certificadodedestruccion10.xsd  cfdv33.xsd  cfdv40.xsd  comercioExterior11.xsd  consumodeCombustibles11.xsd  divisas10.xsd  donat11.xsd  ecc12.xsd  gastosHidrocarburos10.xsd  iedu.xsd  implocal.xsd  ine11.xsd  leyendasFisc.xsd  nomina11.xsd  nomina12.xsd  nomina12b.xsd  notariospublicos.xsd  obrasarteantiguedades.xsd  pagoenespecie.xsd  pagos10.xsd  pagos20.xsd  pfic.xsd  servicioparcialconstruccion10.xsd  timbreFiscalDigital10.xsd  timbreFiscalDigital11.xsd
tests/: test_configurations.py
tests/assets/cfdi33/: cfdi33.xml  cfdi33_min.xml  cfdi33_with_addenda.xml
tests/assets/cfdi33/complemento/: nomina12.xml
tests/assets/cfdi40/: cfdi40.xml  cfdi40_min.xml
tests/assets/cfdi40/complemento/: nomina12.xml
tests/test_cfdi33/: test_cfdi33.py
tests/test_cfdi33/test_complemento/: test_nomina12.py  test_timbre_fiscal_digital.py
tests/test_cfdi40/: test_cfdi40.py
tests/test_cfdi40/test_complemento/: test_nomina12.py  test_timbre_fiscal_digital.py
