[build-system]
requires = [
    "setuptools>=42",
    "xmlschema>=1.11",
    "jsonpickle>=2.0"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.env
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''